@@ -1,6 +1,6 @@
 #!/bin/sh
 ### BEGIN INIT INFO
-# Provides:          neutron-plugin-linuxbridge-agent
+# Provides:          neutron-linuxbridge-agent
 # Required-Start:    $network $local_fs $remote_fs $syslog
 # Required-Stop:     $remote_fs
 # Should-Start:      mysql postgresql rabbitmq-server keystone neutron-linuxbridge-cleanup
@@ -15,10 +15,10 @@
 
 # PATH should only include /usr/* if it runs after the mountnfs.sh script
 PATH=/sbin:/usr/sbin:/bin:/usr/bin
-DESC="Openstack Neutron LinuxBridge Plugin Agent"
+DESC="Openstack Neutron LinuxBridge Agent"
 PROJECT_NAME=neutron
-NAME=${PROJECT_NAME}-plugin-linuxbridge-agent
+NAME=${PROJECT_NAME}-linuxbridge-agent
 DAEMON=/usr/bin/neutron-linuxbridge-agent
-# --config-file=/etc/neutron/neutron.conf will be happened 
+# --config-file=/etc/neutron/neutron.conf will be happened
 # to DAEMON_ARGS later by openstack-pkg-tools
 DAEMON_ARGS="--config-file=/etc/neutron/plugins/ml2/ml2_conf.ini --config-file=/etc/neutron/plugins/ml2/linuxbridge_agent.ini"
