@@ -1,0 +1,17 @@
+#!/bin/sh
+
+set -e
+
+if dpkg-maintscript-helper supports rm_conffile 2>/dev/null; then
+    dpkg-maintscript-helper rm_conffile /etc/init/neutron-plugin-linuxbridge-agent.conf \
+        2:8.0.0~b2-0ubuntu5~ neutron-plugin-linuxbridge-agent -- "$@"
+    dpkg-maintscript-helper rm_conffile /etc/init.d/neutron-plugin-linuxbridge-agent \
+        2:8.0.0~b2-0ubuntu5~ neutron-plugin-linuxbridge-agent -- "$@"
+fi
+
+# dh_installdeb will replace this with shell code automatically
+# generated by other debhelper scripts.
+
+#DEBHELPER#
+
+exit 0
